fix: do not show scrollbar in Chrome if not needed

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -44,6 +44,11 @@
   font-weight: normal;
 }
 
+html {
+  /* Do not show scrollbar in Chrome if not needed */
+  overflow: auto;
+}
+
 body {
   min-height: min-width;
   color: var(--color-text);
